--- a/applications/micropets/current/cats/values.yaml
+++ b/applications/micropets/current/cats/values.yaml
@@ -6,7 +6,7 @@ service:
   name: cats
   component: backend
   port: 7002
-  image: harbor.mytanzu.xyz/library/micropet-tap-cats@sha256:8edbd313f639c742cddeeb4f505035b3b28e5bd84fc6785fcecfb92aef2f1823
+  image: akseutap2registry.azurecr.io/library/micropet-tap-cats@sha256:7404ea15eab139f30598d793c403abe6f5c7c14f547a3f8efa9cf1c0319c85f6
   config_path: /config
   config_filename: pets_config.json
   usedb: false
