gui: Update service configuration https://github.com/bmoussaud/micropets-app/commit/ddf3df8f5d055961c4bcf9beb13ad065914e0ee3

--- a/applications/micropets/current/gui/values.yaml
+++ b/applications/micropets/current/gui/values.yaml
@@ -11,6 +11,6 @@ service:
   config_filename: config.json
   usedb: false
   gui:
-    broker_service: not_provided
+    broker_service: /
     color: black
 
