--- a/applications/workloads/current/micropets/workloads.yaml
+++ b/applications/workloads/current/micropets/workloads.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app.tanzu.vmware.com/workload-type: micropet-service-git
     app.kubernetes.io/part-of: micropets-app
+    app.kubernetes.io/name: cats    
 spec:
   serviceAccountName: tap-default
   source:
@@ -28,6 +29,7 @@ metadata:
   labels:
     app.tanzu.vmware.com/workload-type: micropet-service-git
     app.kubernetes.io/part-of: micropets-app
+    app.kubernetes.io/name: dogs
 spec:
   serviceAccountName: tap-default
   source:
@@ -51,6 +53,7 @@ metadata:
   labels:
     app.tanzu.vmware.com/workload-type: micropet-service-git
     app.kubernetes.io/part-of: micropets-app
+    app.kubernetes.io/name: fishes    
 spec:
   serviceAccountName: tap-default
   source:
@@ -74,6 +77,7 @@ metadata:
   labels:
     app.tanzu.vmware.com/workload-type: micropet-service-git
     app.kubernetes.io/part-of: micropets-app
+    app.kubernetes.io/name: pets
 spec:
   serviceAccountName: tap-default
   source:
@@ -97,6 +101,7 @@ metadata:
   labels:
     app.tanzu.vmware.com/workload-type: micropet-service-git-gui
     app.kubernetes.io/part-of: micropets-app
+    app.kubernetes.io/name: gui
 spec:
   serviceAccountName: tap-default
   source:
