--- a/config/dev-tap/birds/serviceclaims.yml
+++ b/config/dev-tap/birds/serviceclaims.yml
@@ -17,7 +17,7 @@ spec:
   service:
     apiVersion: services.apps.tanzu.vmware.com/v1alpha1
     kind: ResourceClaim
-    name: aso-psql-claim
+    name: aso-psql-bindable
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
