--- a/config/dev-tap/birds/serviceclaims.yml
+++ b/config/dev-tap/birds/serviceclaims.yml
@@ -1,10 +1,8 @@
 apiVersion: servicebinding.io/v1alpha3
 kind: ServiceBinding
 metadata:
-  name: birds-birds-database
+  name: birds-birds-tanzu-database
   annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"birds","app.kubernetes.io/part-of":"micropets-app","apps.tanzu.vmware.com/has-tests":"true","apps.tanzu.vmware.com/workload-type":"web","micropets/kind":"backend"},"name":"birds","namespace":"dev-tap"},"spec":{"env":[{"name":"SPRING_PROFILES_ACTIVE","value":"postgres"}],"params":[{"name":"gitops_server_address","value":"https://github.com/"},{"name":"gitops_repository_owner","value":"bmoussaud"},{"name":"gitops_repository_name","value":"micropets-app-gitops"},{"name":"xxxx_gitops_repository","value":"https://github.com/bmoussaud/micropets-app-gitops"},{"name":"port","value":8080},{"name":"observability","value":false},{"name":"annotations","value":{"autoscaling.knative.dev/minScale":"1"}}],"serviceAccountName":"tap-default","serviceClaims":[{"name":"birds-database","ref":{"apiVersion":"sql.tanzu.vmware.com/v1","kind":"Postgres","name":"birds-database"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/my-birds-svc"}}}}
     autoscaling.knative.dev/minScale: "1"
   labels:
     app.kubernetes.io/name: birds
@@ -15,11 +13,36 @@ metadata:
     app.kubernetes.io/component: run
     carto.run/workload-name: birds
 spec:
-  name: birds-database
+  name: birds-tanzu-database
   service:
     apiVersion: sql.tanzu.vmware.com/v1
     kind: Postgres
-    name: birds-database
+    name: birds-tanzu-database
+  workload:
+    apiVersion: serving.knative.dev/v1
+    kind: Service
+    name: birds
+---
+apiVersion: servicebinding.io/v1alpha3
+kind: ServiceBinding
+metadata:
+  name: birds-birds-azure-database
+  annotations:
+    autoscaling.knative.dev/minScale: "1"
+  labels:
+    app.kubernetes.io/name: birds
+    app.kubernetes.io/part-of: micropets-app
+    apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/workload-type: web
+    micropets/kind: backend
+    app.kubernetes.io/component: run
+    carto.run/workload-name: birds
+spec:
+  name: birds-azure-database
+  service:
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
+    name: birds-azure-database
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
