--- a/config/dev-tap/birds/serviceclaims.yml
+++ b/config/dev-tap/birds/serviceclaims.yml
@@ -97,4 +97,54 @@ spec:
     apiVersion: serving.knative.dev/v1
     kind: Service
     name: birds
+---
+apiVersion: servicebinding.io/v1alpha3
+kind: ServiceBinding
+metadata:
+  name: birds-ref-azure-database
+  annotations:
+    autoscaling.knative.dev/minScale: "1"
+  labels:
+    app.kubernetes.io/name: birds
+    app.kubernetes.io/part-of: micropets-app
+    apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/workload-type: web
+    micropets/kind: backend
+    app.kubernetes.io/component: run
+    carto.run/workload-name: birds
+spec:
+  name: ref-azure-database
+  service:
+    apiVersion: services.apps.tanzu.vmware.com/v1alpha1
+    kind: ResourceClaim
+    name: birds-azure-database
+  workload:
+    apiVersion: serving.knative.dev/v1
+    kind: Service
+    name: birds
+---
+apiVersion: servicebinding.io/v1alpha3
+kind: ServiceBinding
+metadata:
+  name: birds-ref-tanzu-database
+  annotations:
+    autoscaling.knative.dev/minScale: "1"
+  labels:
+    app.kubernetes.io/name: birds
+    app.kubernetes.io/part-of: micropets-app
+    apps.tanzu.vmware.com/has-tests: "true"
+    apps.tanzu.vmware.com/workload-type: web
+    micropets/kind: backend
+    app.kubernetes.io/component: run
+    carto.run/workload-name: birds
+spec:
+  name: ref-tanzu-database
+  service:
+    apiVersion: sql.tanzu.vmware.com/v1
+    kind: Postgres
+    name: birds-tanzu-database
+  workload:
+    apiVersion: serving.knative.dev/v1
+    kind: Service
+    name: birds
 
