--- a/config/dev-tap/simple-mongodb-app/delivery.yml
+++ b/config/dev-tap/simple-mongodb-app/delivery.yml
@@ -1,16 +1,22 @@
-apiVersion: serving.knative.dev/v1
-kind: Service
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   name: simple-mongodb-app
   annotations:
+    kapp.k14s.io/update-strategy: fallback-on-replace
     ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
-    ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
   labels:
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/workload-type: server
     app.kubernetes.io/component: run
     carto.run/workload-name: simple-mongodb-app
 spec:
+  selector:
+    matchLabels:
+      app.kubernetes.io/component: run
+      app.kubernetes.io/part-of: simple-mongodb-app
+      apps.tanzu.vmware.com/workload-type: web
+      carto.run/workload-name: simple-mongodb-app
   template:
     metadata:
       annotations:
@@ -38,4 +44,24 @@ spec:
         securityContext:
           runAsUser: 1000
       serviceAccountName: default
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: simple-mongodb-app
+  labels:
+    app.kubernetes.io/part-of: simple-mongodb-app
+    apps.tanzu.vmware.com/workload-type: server
+    app.kubernetes.io/component: run
+    carto.run/workload-name: simple-mongodb-app
+spec:
+  selector:
+    app.kubernetes.io/component: run
+    app.kubernetes.io/part-of: simple-mongodb-app
+    apps.tanzu.vmware.com/workload-type: web
+    carto.run/workload-name: simple-mongodb-app
+  ports:
+  - targetPort: 8080
+    port: 8080
+    name: http
 
