--- a/config/dev-tap/simple-mongodb-app/serviceclaims.yml
+++ b/config/dev-tap/simple-mongodb-app/serviceclaims.yml
@@ -7,7 +7,7 @@ metadata:
     autoscaling.knative.dev/minScale: "1"
   labels:
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/workload-type: server
     app.kubernetes.io/component: run
     carto.run/workload-name: simple-mongodb-app
 spec:
@@ -17,8 +17,8 @@ spec:
     kind: Secret
     name: secured-autfw-ui-config
   workload:
-    apiVersion: serving.knative.dev/v1
-    kind: Service
+    apiVersion: apps/v1
+    kind: Deployment
     name: simple-mongodb-app
 ---
 apiVersion: services.apps.tanzu.vmware.com/v1alpha1
@@ -30,7 +30,7 @@ metadata:
     autoscaling.knative.dev/minScale: "1"
   labels:
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/workload-type: server
     app.kubernetes.io/component: run
     carto.run/workload-name: simple-mongodb-app
 spec:
@@ -49,7 +49,7 @@ metadata:
     autoscaling.knative.dev/minScale: "1"
   labels:
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: web
+    apps.tanzu.vmware.com/workload-type: server
     app.kubernetes.io/component: run
     carto.run/workload-name: simple-mongodb-app
 spec:
@@ -59,7 +59,7 @@ spec:
     kind: ResourceClaim
     name: simple-mongodb-app-mongodb-database
   workload:
-    apiVersion: serving.knative.dev/v1
-    kind: Service
+    apiVersion: apps/v1
+    kind: Deployment
     name: simple-mongodb-app
 
