supplychain@cluster.local

--- a/config/dev-tap/simple-mongodb-app/delivery.yml
+++ b/config/dev-tap/simple-mongodb-app/delivery.yml
@@ -7,7 +7,7 @@ metadata:
     ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
   labels:
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: server
+    apps.tanzu.vmware.com/workload-type: custom-server
     app.kubernetes.io/component: run
     carto.run/workload-name: simple-mongodb-app
 spec:
@@ -15,7 +15,7 @@ spec:
     matchLabels:
       app.kubernetes.io/component: run
       app.kubernetes.io/part-of: simple-mongodb-app
-      apps.tanzu.vmware.com/workload-type: server
+      apps.tanzu.vmware.com/workload-type: custom-server
       carto.run/workload-name: simple-mongodb-app
   template:
     metadata:
@@ -31,7 +31,7 @@ spec:
       labels:
         app.kubernetes.io/component: run
         app.kubernetes.io/part-of: simple-mongodb-app
-        apps.tanzu.vmware.com/workload-type: server
+        apps.tanzu.vmware.com/workload-type: custom-server
         carto.run/workload-name: simple-mongodb-app
     spec:
       containers:
@@ -51,17 +51,40 @@ metadata:
   name: simple-mongodb-app
   labels:
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: server
+    apps.tanzu.vmware.com/workload-type: custom-server
     app.kubernetes.io/component: run
     carto.run/workload-name: simple-mongodb-app
 spec:
   selector:
     app.kubernetes.io/component: run
     app.kubernetes.io/part-of: simple-mongodb-app
-    apps.tanzu.vmware.com/workload-type: server
+    apps.tanzu.vmware.com/workload-type: custom-server
     carto.run/workload-name: simple-mongodb-app
   ports:
   - targetPort: 8080
     port: 80
     name: http
+---
+apiVersion: projectcontour.io/v1
+kind: HTTPProxy
+metadata:
+  name: simple-mongodb-app-httpproxy
+  labels:
+    app.kubernetes.io/part-of: simple-mongodb-app
+    apps.tanzu.vmware.com/workload-type: custom-server
+    app.kubernetes.io/component: run
+    carto.run/workload-name: simple-mongodb-app
+spec:
+  routes:
+  - conditions:
+    - prefix: /simple-mongodb-app
+    pathRewritePolicy:
+      replacePrefix:
+      - prefix: /simple-mongodb-app
+        replacement: /
+    services:
+    - name: simple-mongodb-app
+      port: 8080
+  virtualhost:
+    fqdn: notprovided.aramco.co
 
