--- a/config/dev-tap/simple-mongodb-app/delivery.yml
+++ b/config/dev-tap/simple-mongodb-app/delivery.yml
@@ -84,7 +84,7 @@ spec:
         replacement: /
     services:
     - name: simple-mongodb-app
-      port: 80
+      port: data.values.params.ports[0].port
   virtualhost:
     fqdn: www.dev-tap.tap3.eu.aks.mytanzu.xyz
 
