--- a/config/dev-tap/simple-mongodb-app/delivery.yml
+++ b/config/dev-tap/simple-mongodb-app/delivery.yml
@@ -86,5 +86,5 @@ spec:
     - name: simple-mongodb-app
       port: 8080
   virtualhost:
-    fqdn: benoit.dev-tap.tap3.eu.aks.mytanzu.xyz
+    fqdn: www.dev-tap.tap3.eu.aks.mytanzu.xyz
 
