supplychain@cluster.local

--- a/config/dev-tap/simple-mongodb-app/delivery.yml
+++ b/config/dev-tap/simple-mongodb-app/delivery.yml
@@ -77,10 +77,10 @@ metadata:
 spec:
   routes:
   - conditions:
-    - prefix: null
+    - prefix: /simple-mongodb-app
     pathRewritePolicy:
       replacePrefix:
-      - prefix: null
+      - prefix: /simple-mongodb-app
         replacement: /
     services:
     - name: simple-mongodb-app
