supplychain@cluster.local

--- a/config/dev-tap/elephants/delivery.yml
+++ b/config/dev-tap/elephants/delivery.yml
@@ -16,6 +16,7 @@ spec:
   template:
     metadata:
       annotations:
+        apps.tanzu.vmware.com/debug: "true"
         apps.tanzu.vmware.com/live-update: "true"
         autoscaling.knative.dev/minScale: "1"
         conventions.carto.run/applied-conventions: |-
