supplychain@cluster.local

--- a/config/dev-tap/elephants/serviceclaims.yml
+++ b/config/dev-tap/elephants/serviceclaims.yml
@@ -42,7 +42,7 @@ spec:
   service:
     apiVersion: v1
     kind: Secret
-    name: micropets-mongodb-azure-credentials
+    name: kde
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
