--- a/config/dev-tap/elephants/serviceclaims.yml
+++ b/config/dev-tap/elephants/serviceclaims.yml
@@ -1,15 +1,29 @@
+apiVersion: kapp.k14s.io/v1alpha1
+kind: Config
+waitRules:
+- conditionMatchers:
+  - type: ServiceAvailable
+    status: "False"
+    failure: true
+  - type: ServiceAvailable
+    status: "True"
+    success: true
+  resourceMatchers:
+  - apiVersionKindMatcher:
+      apiVersion: servicebinding.io/v1alpha3
+      kind: ServiceBinding
+---
 apiVersion: servicebinding.io/v1alpha3
 kind: ServiceBinding
 metadata:
   name: elephants-app-config
   annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions":"{\"kind\":\"ServiceClaimsExtension\",\"apiVersion\":\"supplychain.apps.x-tanzu.vmware.com/v1alpha1\",\"spec\":{\"serviceClaims\":{\"mongodb-database-not-used\":{\"namespace\":\"mongodb\"}}}}"},"labels":{"app.kubernetes.io/name":"elephants","app.kubernetes.io/part-of":"micropets-app","apps.tanzu.vmware.com/workload-type":"web","apps.tanzu.vmware.com/workload-type-x":"custom-server","micropets/kind":"backend"},"name":"elephants","namespace":"dev-tap"},"spec":{"params":[{"name":"fqdn","value":"www.dev-tap.tap3.eu.aks.mytanzu.xyz"},{"name":"prefix","value":"my-custom-prefix"},{"name":"gitops_server_address","value":"https://github.com/"},{"name":"gitops_repository_owner","value":"bmoussaud"},{"name":"gitops_repository_name","value":"micropets-app-gitops"},{"name":"annotations","value":{"autoscaling.knative.dev/minScale":"1"}}],"serviceAccountName":"tap-default","serviceClaims":[{"name":"app-config","ref":{"apiVersion":"v1","kind":"Secret","name":"elephants-configuration"}},{"name":"mongodb-database","ref":{"apiVersion":"v1","kind":"Secret","name":"micropets-mongodb-k8s-credentials"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/micropets-elephants"}}}}
-    serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
     autoscaling.knative.dev/minScale: "1"
+    serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
+    apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/workload-type-x: custom-server
     micropets/kind: backend
@@ -31,13 +45,12 @@ kind: ServiceBinding
 metadata:
   name: elephants-mongodb-database
   annotations:
-    kubectl.kubernetes.io/last-applied-configuration: |
-      {"apiVersion":"carto.run/v1alpha1","kind":"Workload","metadata":{"annotations":{"serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions":"{\"kind\":\"ServiceClaimsExtension\",\"apiVersion\":\"supplychain.apps.x-tanzu.vmware.com/v1alpha1\",\"spec\":{\"serviceClaims\":{\"mongodb-database-not-used\":{\"namespace\":\"mongodb\"}}}}"},"labels":{"app.kubernetes.io/name":"elephants","app.kubernetes.io/part-of":"micropets-app","apps.tanzu.vmware.com/workload-type":"web","apps.tanzu.vmware.com/workload-type-x":"custom-server","micropets/kind":"backend"},"name":"elephants","namespace":"dev-tap"},"spec":{"params":[{"name":"fqdn","value":"www.dev-tap.tap3.eu.aks.mytanzu.xyz"},{"name":"prefix","value":"my-custom-prefix"},{"name":"gitops_server_address","value":"https://github.com/"},{"name":"gitops_repository_owner","value":"bmoussaud"},{"name":"gitops_repository_name","value":"micropets-app-gitops"},{"name":"annotations","value":{"autoscaling.knative.dev/minScale":"1"}}],"serviceAccountName":"tap-default","serviceClaims":[{"name":"app-config","ref":{"apiVersion":"v1","kind":"Secret","name":"elephants-configuration"}},{"name":"mongodb-database","ref":{"apiVersion":"v1","kind":"Secret","name":"micropets-mongodb-k8s-credentials"}}],"source":{"git":{"ref":{"branch":"main"},"url":"https://github.com/bmoussaud/micropets-elephants"}}}}
-    serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
     autoscaling.knative.dev/minScale: "1"
+    serviceclaims.supplychain.apps.x-tanzu.vmware.com/extensions: '{"kind":"ServiceClaimsExtension","apiVersion":"supplychain.apps.x-tanzu.vmware.com/v1alpha1","spec":{"serviceClaims":{"mongodb-database-not-used":{"namespace":"mongodb"}}}}'
   labels:
     app.kubernetes.io/name: elephants
     app.kubernetes.io/part-of: micropets-app
+    apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/workload-type-x: custom-server
     micropets/kind: backend
