supplychain@cluster.local

--- a/config/dev-tap/pets/delivery.yml
+++ b/config/dev-tap/pets/delivery.yml
@@ -6,7 +6,8 @@ metadata:
     ootb.apps.tanzu.vmware.com/servicebinding-workload: "true"
     ootb.apps.tanzu.vmware.com/apidescriptor-ref: "true"
   labels:
-    app.kubernetes.io/part-of: pets
+    app.kubernetes.io/name: pets
+    app.kubernetes.io/part-of: micropets
     apps.tanzu.vmware.com/has-tests: "true"
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/component: run
