--- a/config/dev-tap/dogs/serviceclaims.yml
+++ b/config/dev-tap/dogs/serviceclaims.yml
@@ -34,7 +34,7 @@ spec:
   service:
     apiVersion: v1
     kind: Secret
-    name: dogs-config-2
+    name: dogs-config
   workload:
     apiVersion: serving.knative.dev/v1
     kind: Service
