--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -9,6 +9,11 @@ metadata:
   name: micropets-int
 ---
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: micropets-xxx
+---
+apiVersion: v1
 kind: ConfigMap
 metadata:
   name: desired-namespaces
