aks-eu-tap-4 namespaces

--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -27,8 +27,14 @@ data:
     ---
     namespaces:
     - name: micropets-int
-      language: java
-      database: postgres
+      languages: 
+      - java
+      - golang
+      databases: 
+      - postgres
     - name: micropets-dev
-      language: java
-      database: postgres
+      language: 
+      - java
+      - golang
+      databases: 
+      - postgres
