fix namespace dev

--- a/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
+++ b/environments/azure/aks-eu-tap-4/gitops/desired-namespaces.yaml
@@ -33,7 +33,7 @@ data:
       databases: 
       - postgres
     - name: micropets-dev
-      language: 
+      languages: 
       - java
       - golang
       databases: 
