supplychain@cluster.local

--- a/config/kcd-fr-23/secret-agent-java/delivery.yml
+++ b/config/kcd-fr-23/secret-agent-java/delivery.yml
@@ -57,6 +57,8 @@ spec:
     spec:
       containers:
       - env:
+        - name: SPRING_PROFILES_ACTIVE
+          value: postgres
         - name: BPL_DEBUG_ENABLED
           value: "true"
         - name: BPL_DEBUG_PORT
